# VScodeCpp

createLibrary/: CMakeLists.txt  readme.md
createLibrary/include/: person.h
createLibrary/lib/: libperson_d.so.1  libperson_d.so.1.0
createLibrary/src/app/: CMakeLists.txt  libApp.cpp
createLibrary/src/src/: CMakeLists.txt  person.cpp
